founder message added

--- a/founder-message.html
+++ b/founder-message.html
@@ -101,59 +101,63 @@
     </header>
     <!-- End Header -->
 
-    <!-- Start Breadcrumb ============================================= -->
-    <div class="breadcrumb-area gradient-bg bg-cover shadow dark text-light text-center"
-        style="background-image: url(assets/img/breadcrumb/contact.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 offset-lg-2">
-                    <h1>Contact Us</h1>
-                    <ul class="breadcrumb">
-                        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li class="active">Contact</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Breadcrumb -->
 
-    <!-- Start Contact Area ============================================= -->
+    <!-- Start Founder Message
+    ============================================= -->
     <div class="container py-4">
-        <h1 class="fw-bolder text-success text-center">Contact Us</h1>
-        <p class="fs-5 text-justify mb-4">
-            Please let us know if you have any question, want to leave a comment, or would like further information
-            about S L B I Group
-        </p>
 
-        <div class="row cow-cols-2">
-            <div class="col-12 col-lg-6 col-md-6 mb-3">
-                <img width="250" src="assets/img/contact/sw.jpg" class="img-fluid mb-4" alt="...">
-                <p class="fs-4 fw-bold">SLBI Group LLC</p>
-                <p>
-                    Wuhrweg32, 4450 Sissach, <br>
-                    Switzerland <br>
-                    Tel: +41 61 55 44 525 <br>
-                    E-mail: <a href="mailto:info@slbigroup.com">info@slbigroup.com</a>
-                </p>
+        <div class="row founder-message">
+            <div class="col-lg-5"></div>
+            <div class="col-lg-7">
+                <h1 class="fw-bolder text-success text-lg-left text-md-left">Founder Message</h1>
+
             </div>
-            <div class="col-12 col-lg-6 col-md-6 ">
-                <img width="275" src="assets/img/contact/sl.jpg" class="img-fluid lanka mb-4" alt="...">
-                <p class="fs-4 fw-bold">S L B I Group (Pvt) Ltd</p>
-                <p>
-                    No. 563/2, Hajiyar Road,<br>
-                    Nintavur-05, <br>
-                    Sri Lanka <br>
-                    Tel: <span style="visibility: hidden;">'</span> +94 67 31 31 931 <br>
-                    Mob: +94 777 17 29 49 <br>
-                    &nbsp; &nbsp; &nbsp; <span style="visibility: hidden;">''</span> +94 760 99 91 31 <br>
-                    E-mail: <a href="mailto:info@slbigroup.com">info@slbigroup.com</a>
+
+        </div>
+        <div class="row">
+            <div class="col-lg-5 mw-100">
+                <img src="assets/img/about/founder.png" class="mb-4" alt="founder">
+            </div>
+            <div class="col-lg-7">
+                <p class="text-justify">
+                    S L B I GROUP is not only the number one destination in the world until world destroyed but also on
+                    a
+                    journey of defining 10 structures to perpetuate a series of community tasks and the company is a
+                    journey
+                    that brings together all the entrepreneurs to make company employers best the economy.
+                </p>
+                <p class="text-justify">
+                    Our company is ready to promote domestic and foreign manufacturers and market their products
+                    globally.  And
+                    is to establish branches of our company globally. As a solution to the problem of unemployment in
+                    developing
+                    countries, it has established vocational colleges in the rural areas of those countries, trained
+                    young
+                    people and women, set up various manufacturing companies, has produced and marketed internationally
+                    and
+                    paved the way for solving the problem of unemployment.
+                </p>
+                <p class="text-justify">
+                    We have the opportunity to determine the income of our company employees and help improve their
+                    economy. We
+                    train everyone who joins our company to do community service and engage in social service work. We
+                    provide
+                    our customers with the best products and the best market products to suit their cash flow and
+                    maintain the
+                    best possible relationships with our customers. We will also work to support the economic and
+                    socio-economic
+                    development of the countries in which our companies operate.
+
+                </p>
+                <p class="founder">
+                    <span class="name">Prof. Rifaitheen Naidu (MBA, PMP, DBA)</span>
+                    <span class="designation">Founder</span>
+                    <span class="company">S L B I Group</span>
                 </p>
             </div>
         </div>
     </div>
-    <!-- End Contact Area -->
-
+    <!-- End Founder Message -->
 
 
 
@@ -219,6 +223,6 @@
 
 </body>
 
-<!-- Mirrored from validthemes.live/themeforest/dustra/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Sep 2022 18:50:37 GMT -->
+<!-- Mirrored from validthemes.live/themeforest/dustra/team-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Sep 2022 18:50:45 GMT -->
 
 </html>
