--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown">About Us</a>
                             <ul class="dropdown-menu">
                                 <li><a href="aboutus.html">Abstracts</a></li>
-                                <li><a href="#">Founder Message</a></li>
+                                <li><a href="founder-message.html">Founder Message</a></li>
                                 <li><a href="#">Board of Directors</a></li>
                                 <li><a href="#">Our Vision</a></li>
                                 <li><a href="#">Our Mission</a></li>
@@ -185,7 +185,7 @@
             journey of defining 10 structures to perpetuate a series of community tasks and the company is a journey
             that brings together all the entrepreneurs to make company employers best the economy.
         </p>
-        <a href="#" class="text-muted fs-5 read-more fst-italic">Read More...</a>
+        <a href="founder-message.html" class="text-muted fs-5 read-more fst-italic">Read More...</a>
     </div>
     <!-- End Founder Message -->
 
