--- a/aboutus.html
+++ b/aboutus.html
@@ -63,7 +63,7 @@
                         <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown">About Us</a>
                         <ul class="dropdown-menu">
                             <li><a href="aboutus.html">Abstracts</a></li>
-                            <li><a href="#">Founder Message</a></li>
+                            <li><a href="founder-message.html">Founder Message</a></li>
                             <li><a href="#">Board of Directors</a></li>
                             <li><a href="#">Our Vision</a></li>
                             <li><a href="#">Our Mission</a></li>
