vision mission added

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                                 <li><a href="aboutus.html">Abstracts</a></li>
                                 <li><a href="founder-message.html">Founder Message</a></li>
                                 <li><a href="#">Board of Directors</a></li>
-                                <li><a href="#">Our Vision</a></li>
-                                <li><a href="#">Our Mission</a></li>
+                                <li><a href="vision.html">Our Vision & Missions</a></li>
                                 <li><a href="#">Objective</a></li>
                                 <li><a href="#">Policies</a></li>
                             </ul>
