--- a/vision.html
+++ b/vision.html
@@ -92,54 +92,37 @@
     </nav>
     <!-- End Navigation -->
 
-    <!-- Start Breadcrumb ============================================= -->
-    <div class="breadcrumb-area gradient-bg bg-cover shadow dark text-light text-center"
-        style="background-image: url(assets/img/breadcrumb/aboutus.jpg);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 offset-lg-2">
-                    <h1>About Us</h1>
-                    <ul class="breadcrumb">
-                        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li class="active">About Us</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Breadcrumb -->
 
     <!-- Start Services Details ============================================= -->
     <div class="container py-4">
 
-        <h1 class="fw-bolder text-success text-center">Overview</h1>
-        <p class="text-justify">
-            S L B I GROUP has become the largest Industrial Campus, Courses &amp; Trainings and
-            Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp; Shopping
-            Malls, Wholesale
-            Marketing, Retail Marketing, International Transit and E-Commerce in the world in just a
-            few
-            years and barely. Anyone expected it to be so successful. It has provided numerous
-            business
-            opportunities for small and medium. Enterprises to leverage the innovative technology to
-            compete more efficiently domestically and globally. This study does not attempt to
-            describe S L
-            B I GROUP as a perfect business; rather it discuss the marketing strategies, promotion,
-            distribution channels and some important lessons that were carried out by Founder MR.
-            RIFAITHEEN NAIDU to achieve success in this. Complex world of manufacturing and trading,
-            in this literature review, we examine a few key factors of S L B I GROUP’s success such
-            as its
-            specific marketing strategies, various challenges, its strong branding image, superior
-            customer
-            value, proposition, better shopping experience, huge sales volume and economies of
-            scale.
+        <h1 class="fw-bolder text-success text-center">Our Vision</h1>
+
+        <p class="text-justify bg-gray p-5 text-center fw-bold display-4">
+            BECOME A BUSINESS LEADER IN THE WORLD
         </p>
-        <p class="text-justify">
-            S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings and
-            Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp; Shopping
-            Malls, Wholesale
-            Marketing, Retail Marketing, International Transit and E-Commerce
-        </p>
+
+    </div>
+    <!-- End Services Details -->
+
+    <!-- Start Services Details ============================================= -->
+    <div class="container py-4">
+
+        <h1 class="fw-bolder text-success text-center">Our 10 Missions</h1>
+
+        <ol class="list-group list-group-numbered fs-4">
+            <li class="list-group-item">ADMINISTRATION</li>
+            <li class="list-group-item">HELPING MINDS AND SERVICES</li>
+            <li class="list-group-item">MARKETING TACTICS</li>
+            <li class="list-group-item">CONCERN IN DOMESTIC PRODUCTS</li>
+            <li class="list-group-item">INTRODUCTION OF INTERNATIONAL PRODUCTS</li>
+            <li class="list-group-item">INTRODUCE OUR BUSINESS IN INDIA</li>
+            <li class="list-group-item">INTRODUCE OUR BUSINESS IN GULF COUNTRIES</li>
+            <li class="list-group-item">INTRODUCE OUR BUSINESS IN EUROPE COUNTRIES</li>
+            <li class="list-group-item">ESTABLISH THE INTERNATIONAL PRODUCTS IN OUR COUNTRY</li>
+            <li class="list-group-item">ESTABLISHING OUR OWN PRODUCTIONS </li>
+        </ol>
+
     </div>
     <!-- End Services Details -->
 
