--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="aboutus.html">Abstracts</a></li>
                                 <li><a href="founder-message.html">Founder Message</a></li>
-                                <li><a href="#">Board of Directors</a></li>
+                                <li><a href="directors.html">Board of Directors</a></li>
                                 <li><a href="vision.html">Our Vision & Missions</a></li>
                                 <li><a href="#">Objective</a></li>
                                 <li><a href="#">Policies</a></li>
