--- a/directors.html
+++ b/directors.html
@@ -36,7 +36,6 @@
 
 <body>
 
-
     <!-- Header 
     ============================================= -->
     <header id="home">
@@ -100,64 +99,82 @@
     </header>
     <!-- End Header -->
 
+    <!-- Directors Area -->
+    <div class="bg-gray p-2 text-dark bg-opacity-10">
+        <div class="container py-5 text-center ">
+            <h1 class="fw-bolder text-success">Our Board of Directors</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-3">
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay team">
+                            <a href="#" class="card-text fs-5 name">
+                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> International Monetary Fund Analyst
+                                <span class="designation">
+                                    Founder & CEO
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay team">
+                            <a href="#" class="card-text fs-5 name">
+                                Mohamed Muzammil
+                                <span class="designation">
+                                    Co-Founder/Director/ <br> Chief Finance Officer
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay team">
+                            <a href="#" class="card-text fs-5 name">
+                                Muhammed Mubarak
+                                <span class="designation">
+                                    Co-Founder/Director/ <br> Chief Administrative Officer
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay team">
+                            <a href="#" class="card-text fs-5 name">
+                                A. Natheer Ahamed
+                                <span class="designation">
+                                    Director <br> Business Development
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay team">
+                            <a href="#" class="card-text fs-5 name">
+                                Chandrakala Ramanan
+                                <span class="designation">
+                                    Director – SLBI (Success Lankan Business Ideas) Group LLC, Switzerland
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
-    <!-- Start Founder Message
-    ============================================= -->
-    <div class="container py-4">
 
-        <div class="row founder-message">
-            <div class="col-lg-5"></div>
-            <div class="col-lg-7">
-                <h1 class="fw-bolder text-success text-lg-left text-md-left">Founder Message</h1>
-
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-lg-5 mw-100">
-                <img src="assets/img/about/founder.png" class="mb-4" alt="founder">
-            </div>
-            <div class="col-lg-7">
-                <p class="text-justify">
-                    S L B I GROUP is not only the number one destination in the world until world destroyed but also on
-                    a
-                    journey of defining 10 structures to perpetuate a series of community tasks and the company is a
-                    journey
-                    that brings together all the entrepreneurs to make company employers best the economy.
-                </p>
-                <p class="text-justify">
-                    Our company is ready to promote domestic and foreign manufacturers and market their products
-                    globally.  And
-                    is to establish branches of our company globally. As a solution to the problem of unemployment in
-                    developing
-                    countries, it has established vocational colleges in the rural areas of those countries, trained
-                    young
-                    people and women, set up various manufacturing companies, has produced and marketed internationally
-                    and
-                    paved the way for solving the problem of unemployment.
-                </p>
-                <p class="text-justify">
-                    We have the opportunity to determine the income of our company employees and help improve their
-                    economy. We
-                    train everyone who joins our company to do community service and engage in social service work. We
-                    provide
-                    our customers with the best products and the best market products to suit their cash flow and
-                    maintain the
-                    best possible relationships with our customers. We will also work to support the economic and
-                    socio-economic
-                    development of the countries in which our companies operate.
-
-                </p>
-                <p class="founder">
-                    <span class="name">Prof. Rifaitheen Naidu (MBA, PMP, DBA)</span>
-                    <span class="designation">Founder</span>
-                    <span class="company">S L B I Group</span>
-                </p>
             </div>
         </div>
     </div>
-    <!-- End Founder Message -->
-
+    <!-- End Directors Area -->
 
 
     <!-- Start Footer  ============================================= -->
@@ -216,12 +233,13 @@
     <script src="assets/js/progress-bar.min.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="assets/js/jquery.simpleLoadMore.js"></script>
+    <script src="assets/js/gsap.min.js"></script>
+    <script src="assets/js/jquery.MouseMove.js"></script>
     <script src="assets/js/count-to.js"></script>
     <script src="assets/js/bootsnav.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
-
-<!-- Mirrored from validthemes.live/themeforest/dustra/team-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Sep 2022 18:50:45 GMT -->
 
 </html>
