bod text changes

--- a/directors.html
+++ b/directors.html
@@ -108,8 +108,8 @@
                     <div class="card">
                         <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
                         <div class="card-body overlay team">
-                            <a href="#" class="card-text fs-5 name">
-                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> International Monetary Fund Analyst
+                            <a href="#" class="card-text fs-5 name ceo">
+                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> I M F Analyst
                                 <span class="designation">
                                     Founder & CEO
                                 </span>
@@ -163,7 +163,7 @@
                             <a href="#" class="card-text fs-5 name">
                                 Chandrakala Ramanan
                                 <span class="designation">
-                                    Director – SLBI (Success Lankan Business Ideas) Group LLC, Switzerland
+                                    Director – SLBI Group LLC, Switzerland
                                 </span>
                             </a>
                         </div>
