BOD Details added

--- a/muza.html
+++ b/muza.html
@@ -99,82 +99,46 @@
     </header>
     <!-- End Header -->
 
-    <!-- Directors Area -->
-    <div class="bg-gray p-2 text-dark bg-opacity-10">
-        <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">Our Board of Directors</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="rifai.html" class="card-text fs-5 name ceo">
-                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> I M F Analyst
-                                <span class="designation">
-                                    Founder & CEO
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muza.html" class="card-text fs-5 name">
-                                Mohamed Muzammil
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Finance Officer
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muba.html" class="card-text fs-5 name">
-                                Muhammed Mubarak
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Administrative Officer
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="nath.html" class="card-text fs-5 name">
-                                A. Natheer Ahamed
-                                <span class="designation">
-                                    Director <br> Business Development
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="chand.html" class="card-text fs-5 name">
-                                Chandrakala Ramanan
-                                <span class="designation">
-                                    Director – SLBI Group LLC, Switzerland
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+    <!-- Start Single Team ============================================= -->
+    <div class="container py-5">
+        <div class="title mb-4">
+            <span class="name d-block display-6 fw-bold">Mohamed Muzammil</span>
+            <span class="designation fs-4">Co-Founder/Director/Chief Finance Officer</span>
+        </div>
+        <div class="row team-single">
+            <div class="col-lg-5">
+                <img src="assets/img/team/2.jpg" class="mb-4" alt="founder">
+            </div>
 
+            <div class="col-lg-7">
+                <p class="display-6">View Profile</p>
+                <p class="text-justify">
+                    He has primary responsibility for the planning, implementation, managing and running of all the
+                    finance activities of S L B I Group, including business planning, budgeting, forecasting,
+                    negotiations and maintaining investor relations and partnership compliance.
 
+                </p>
+
+                <p class="display-6 mt-4">Experience</p>
+                <p class="text-justify">
+                    With over 20 years of experience in entrepreneurship, management, administration, operations,
+                    software engineering, business planning, accounting, finance, financial analysis, and decision
+                    analysis. He has the breadth and depth of experience to quickly understand entrepreneurs’ business
+                    and craft the most suitable solutions.
+                </p>
+
+                <p class="display-6 mt-4">Education</p>
+
+                <p class="text-justify">
+                    MBA (Finance), B.Com (Specialized in Accounting and Finance), Diploma Stage of Certified Management
+                    Accountants (CMA), Diploma in Computerized Accounting, Diploma in Software Engineering
+                </p>
             </div>
         </div>
     </div>
-    <!-- End Directors Area -->
+
+    <!-- End Start Single Team -->
+
 
 
     <!-- Start Footer  ============================================= -->
@@ -204,7 +168,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I Group</a>
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I
+                                Group</a>
                         </p>
                     </div>
                 </div>
