--- a/rifai.html
+++ b/rifai.html
@@ -99,82 +99,75 @@
     </header>
     <!-- End Header -->
 
-    <!-- Directors Area -->
-    <div class="bg-gray p-2 text-dark bg-opacity-10">
-        <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">Our Board of Directors</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="rifai.html" class="card-text fs-5 name ceo">
-                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> I M F Analyst
-                                <span class="designation">
-                                    Founder & CEO
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muza.html" class="card-text fs-5 name">
-                                Mohamed Muzammil
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Finance Officer
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muba.html" class="card-text fs-5 name">
-                                Muhammed Mubarak
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Administrative Officer
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="nath.html" class="card-text fs-5 name">
-                                A. Natheer Ahamed
-                                <span class="designation">
-                                    Director <br> Business Development
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="chand.html" class="card-text fs-5 name">
-                                Chandrakala Ramanan
-                                <span class="designation">
-                                    Director – SLBI Group LLC, Switzerland
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+    <!-- Start Single Team ============================================= -->
+    <div class="container py-5">
+        <div class="title mb-4">
+            <span class="name d-block display-6 fw-bold">Prof. Rifaitheen Naidu (MBA, PMP, DBA)</span>
+            <span class="designation fs-4">Founder & CEO</span>
+        </div>
+        <div class="row team-single">
+            <div class="col-lg-5">
+                <img src="assets/img/team/1.jpg" class="mb-4" alt="founder">
+            </div>
 
+            <div class="col-lg-7">
+                <p class="display-6">View Profile</p>
+                <p class="text-justify">
+                    He forms and establishes S L B I Group. He is typically responsible for achieving the mission and
+                    vision of a company. Essentially, he takes a business from an idea to an entity in the early stages
+                    of a company, team members wear many hats ensuring the work gets done to keep the company going as
+                    it grows and scales. In many situations, this means the individual who created the business is often
+                    tasked with managing the overall operations of the company as CEO
+                </p>
 
+                <p class="display-6 mt-4">Experience</p>
+                <p class="text-justify">
+                    He holds a bachelor's degree in Business Management and Investment Management from Binary University
+                    Malaysia. Courses; He studied an MBA program covering various fields such as business management
+                    accounting, utilization statistics, human resources, business communication, business ethics,
+                    business law, business strategy, finance, and management economics. He studied management,
+                    entrepreneurship, marketing, supply-chain management and operational management in a way that is
+                    most relevant to management analysis and strategy.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <p class="display-6 mt-4">Education</p>
+
+                <p class="fs-5 fw-bold">Master of Business Administration </p>
+                <p class="text-justify">
+                    With over 10 years of experience in entrepreneurship, program cover various areas of business
+                    administration such as accounting, applied statistics, human resources, business communication,
+                    business ethics, business law, business strategy, finance, managerial economics, management,
+                    entrepreneurship, marketing, supply-chain management, and operations management in a manner most
+                    relevant to management analysis and strategy.. He has the extensiveness and deepness of experience
+                    to quickly understand entrepreneurs’ business and craft the most suitable solutions.
+                </p>
+
+                <p class="fs-5 fw-bold">Doctor of Business Administration </p>
+                <p class="text-justify">
+                    He holds a Doctorate in Advanced Doctoral, Examination, Research in Project and Business Management.
+                    D.P.A. Doctoral degree in Business Administration at Binary University in collaboration with the
+                    Department of Business Management and Technology related fields. After graduation he received the
+                    highest academic qualification in business administration and served as a full-time, in-university
+                    professor and postgraduate researcher in the field.
+                </p>
+                <p class="fs-5 fw-bold">Project Management Proposal </p>
+                <p class="text-justify">
+                    He holds a bachelor's degree in Project Management Proposal from Sunway University Malaysia.
+                    Courses; He studied an PMP program; organizational influences and project life cycle, project
+                    management processes, project integration management, project scope management, project time
+                    management, project cost management, project quality management, project human resource management,
+                    project communications management, project risk management, project procurement management and
+                    project stakeholder management.
+
+                </p>
             </div>
         </div>
     </div>
-    <!-- End Directors Area -->
+    <!-- End Start Single Team -->
 
 
     <!-- Start Footer  ============================================= -->
