--- a/nath.html
+++ b/nath.html
@@ -99,82 +99,47 @@
     </header>
     <!-- End Header -->
 
-    <!-- Directors Area -->
-    <div class="bg-gray p-2 text-dark bg-opacity-10">
-        <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">Our Board of Directors</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="rifai.html" class="card-text fs-5 name ceo">
-                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> I M F Analyst
-                                <span class="designation">
-                                    Founder & CEO
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muza.html" class="card-text fs-5 name">
-                                Mohamed Muzammil
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Finance Officer
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muba.html" class="card-text fs-5 name">
-                                Muhammed Mubarak
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Administrative Officer
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="nath.html" class="card-text fs-5 name">
-                                A. Natheer Ahamed
-                                <span class="designation">
-                                    Director <br> Business Development
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="chand.html" class="card-text fs-5 name">
-                                Chandrakala Ramanan
-                                <span class="designation">
-                                    Director – SLBI Group LLC, Switzerland
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+    <!-- Start Single Team ============================================= -->
+    <div class="container py-5">
+        <div class="title mb-4">
+            <span class="name d-block display-6 fw-bold">A. Natheer Ahamed</span>
+            <span class="designation fs-4">Director – Business Development </span>
+        </div>
+        <div class="row team-single">
+            <div class="col-lg-5">
+                <img src="assets/img/team/3.jpg" class="mb-4" alt="founder">
+            </div>
 
+            <div class="col-lg-7">
+                <p class="display-6">View Profile</p>
+                <p class="text-justify">
+                    As a business development Director, he’ll identify new business opportunities in order to generate
+                    revenue, improve profitability and help the business grow. His work can involve careful strategic
+                    planning and positioning in the appropriate markets, or enhancing the operation of the business,
+                    position or reputation in some way. He may have a single role in the organization or lead a team of
+                    staff. His work will often reach across all areas of the business.
+                </p>
 
+                <p class="display-6 mt-4">Experience</p>
+                <p class="text-justify">
+                    Multy linguistic, having more than 20 years experience in entrepreneurship, management, sales,
+                    marketing, business development and decision analysis in various companies and relatedly had
+                    travelled many countries. He has the extent and gravity of experience to quickly understand
+                    entrepreneurs’ business and craft the most suitable solutions.
+                </p>
+
+                <p class="display-6 mt-4">Education</p>
+
+                <p class="text-justify">
+                    Accredited Bachelor Degree in Science Faculty, Higher National Diploma in Marketing, Diploma in
+                    Human Resource Managements (HRM), Diploma in Information Technology
+                </p>
             </div>
         </div>
     </div>
-    <!-- End Directors Area -->
+
+    <!-- End Start Single Team -->
+
 
 
     <!-- Start Footer  ============================================= -->
@@ -204,7 +169,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I Group</a>
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I
+                                Group</a>
                         </p>
                     </div>
                 </div>
